revision / added a paper

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -7459,6 +7459,18 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   timestamp = {2017.06.28},
 }
 
+@InProceedings{Ganitkevitch2013,
+  author    = {Ganitkevitch, J. and van Durme, B. and Callison-Burch, C.},
+  title     = {PPDB: The paraphrase database},
+  booktitle = {Conference of the North American Chapter of the ACL: Human Language Technologies},
+  year      = {2013},
+  pages     = {758-764},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
+  url       = {http://aclweb.org/anthology/N13-1092},
+}
+
 @Article{Gao2015,
   author    = {Gao, M. and Lim, E.-P. and Lo, D. and Prasetyo, P. K.},
   title     = {On detecting maximal quasi antagonistic communities in signed graphs},
@@ -7650,6 +7662,17 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   groups        = {Others, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.26},
+}
+
+@InProceedings{Gerz2016,
+  author    = {Gerz, Daniela and Vulić, Ivan and Hill, Felix and Reichart, Roi and Korhonen, Anna},
+  title     = {SimVerb-3500: A Large-Scale Evaluation Set of Verb Similarity},
+  booktitle = {Conference on Empirical Methods on Natural Language Processing},
+  year      = {2016},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
+  url       = {https://aclweb.org/anthology/D16-1235},
 }
 
 @Article{Gfeller2005,
@@ -8743,6 +8766,20 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   owner     = {Vincent},
   timestamp = {2017.08.06},
   url       = {http://dl.acm.org/citation.cfm?id=1614063},
+}
+
+@Article{Halko2011,
+  author    = {Halko, N. and Martinsson, P. G. and Tropp, J. A.},
+  title     = {Finding Structure with Randomness: Probabilistic Algorithms for Constructing Approximate Matrix Decompositions},
+  journal   = {SIAM Review},
+  year      = {2011},
+  volume    = {53},
+  number    = {2},
+  pages     = {217-288},
+  doi       = {10.1137/090771806},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
 }
 
 @Book{Hand1981,
@@ -14792,6 +14829,18 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.14},
 }
 
+@InProceedings{Mercado2016,
+  author    = {Mercado, P. and Tudisco, F. and Hein, M},
+  title     = {Clustering Signed Networks with the Geometric Mean of Laplacians},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2016},
+  file      = {:Clustering Signed Networks with the Geometric Mean of Laplacians.pdf:PDF},
+  groups    = {Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
+  url       = {http://papers.nips.cc/paper/6163-clustering-signed-networks-with-the-geometric-mean-of-laplacians},
+}
+
 @Article{Merris1994,
   author    = {Merris, R.},
   title     = {Laplacian Matrices of Graphs: A Survey},
@@ -15308,6 +15357,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {_Graph-Unrelated, Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.26},
+}
+
+@InProceedings{Mrki2016,
+  author    = {Mrksic, N. and O Séaghdha, D. and Thomson, B. and Gasic, M. and Rojas-Barahona, L. M. and Su, P.-H. and Vandyke, D. and Wen, T.-H. and Young, S.},
+  title     = {Counter-fitting Word Vectors to Linguistic Constraints},
+  booktitle = {Conference of the North American Chapter of the ACL: Human Language Technologies},
+  year      = {2016},
+  doi       = {10.18653/v1/n16-1018},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
 }
 
 @Article{Mrvar2009,
@@ -16157,10 +16217,10 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {Annual Conference of the North American Chapter of the ACL},
   year      = {2015},
   pages     = {984-989},
+  doi       = {10.3115/v1/n15-1100},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.27},
-  url       = {https://www.aclweb.org/anthology/N15-1100},
 }
 
 @Article{Orman2009,
@@ -16691,10 +16751,10 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {Conference on Empirical Methods in Natural Language Processing},
   year      = {2014},
   pages     = {1532-1543},
+  doi       = {10.3115/v1/D14-1162},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.27},
-  url       = {http://www.aclweb.org/anthology/D14-1162},
 }
 
 @Article{Peters1996,
@@ -16742,10 +16802,10 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {53rd Annual Meeting of the ACL / 7th International Joint Conference on Natural Language Processing},
   year      = {2015},
   pages     = {21-26},
+  doi       = {10.3115/v1/P15-2004},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.27},
-  url       = {https://www.aclweb.org/anthology/P15-2004},
 }
 
 @Article{PICCARDI2011,
@@ -17429,6 +17489,17 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://proceedings.mlr.press/v22/sundar12/sundar12Supple.pdf},
 }
 
+@InProceedings{Rao2009,
+  author    = {Rao, D. and Ravichandran, D.},
+  title     = {Semisupervised polarity lexicon induction},
+  booktitle = {12th Conference of the European Chapter of the ACL},
+  year      = {2009},
+  pages     = {675-682},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
+  url       = {http://aclweb.org/anthology/E09-1077},
+}
+
 @Article{Ratti2010,
   author    = {Ratti, C. and Sobolevsky, S. and Calabrese, F. and Andris, C. and Reades, J. and Martino, M. and Claxton, R. and Strogatz, S. H.},
   title     = {Redrawing the Map of Great Britain from a Network of Human Interactions},
@@ -17773,6 +17844,17 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2016.01.06},
   url       = {https://books.google.fr/books?id=VMYQrt6fZr8C},
+}
+
+@Book{Roget1852,
+  title     = {Roget's Thesaurus of English Words and Phrases},
+  publisher = {N/A},
+  year      = {1852},
+  author    = {Roget, P. M.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
+  url       = {https://en.wikipedia.org/wiki/Roget%27s_Thesaurus},
 }
 
 @InProceedings{Romano2014,
@@ -18321,6 +18403,17 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.15},
 }
 
+@InProceedings{Schwartz2015,
+  author    = {Schwartz, R. and Reichart, R. and Rappoport, A.},
+  title     = {Symmetric Pattern Based Word Embeddings for Improved Word Similarity Prediction},
+  booktitle = {19th Conference on Computational Natural Language Learning},
+  year      = {2015},
+  doi       = {10.18653/v1/k15-1026},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
+}
+
 @Article{Scott1988,
   author    = {Scott, J.},
   title     = {Social Network Analysis},
@@ -18382,7 +18475,7 @@ old title: The map equation and the resolution limit in community detection},
   year      = {2017},
   pages     = {939-949},
   file      = {:Semantic Word Clusters Using Signed Spectral Clustering.pdf:PDF},
-  groups    = {_To do},
+  groups    = {Graph Partitioning, Done Manually},
   owner     = {Vincent},
   timestamp = {2017.08.03},
   url       = {https://www.aclweb.org/anthology/P/P17/P17-1087.pdf},
@@ -20077,10 +20170,10 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {52nd Annual Meeting of the ACL},
   year      = {2014},
   pages     = {1555-1565},
+  doi       = {10.3115/v1/p14-1146},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.27},
-  url       = {http://www.aclweb.org/old_anthology/P/P14/P14-1146.xhtml},
 }
 
 @Article{Tang2015a,
@@ -21067,6 +21160,18 @@ old title: The map equation and the resolution limit in community detection},
   timestamp     = {2017.06.04},
 }
 
+@InProceedings{Vlachos2009,
+  author    = {Vlachos, A. and Korhonen, A. and Ghahramani, Z.},
+  title     = {Unsupervised and Constrained Dirichlet Process Mixture Models for Verb Clustering},
+  booktitle = {Workshop on Geometrical Models of Natural Language Semantics},
+  year      = {2009},
+  pages     = {74-82},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
+  url       = {http://dl.acm.org/citation.cfm?id=1705425},
+}
+
 @Article{Vlasblom2009,
   author    = {Vlasblom, J. and Wodak, S. J.},
   title     = {Markov clustering versus affinity propagation for the partitioning of protein interaction graphs},
@@ -21346,6 +21451,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.23},
+}
+
+@Article{Wang2016q,
+  author    = {Wang, J. and Yu, L.-C. and Lai, K. R. and Zhang, X.},
+  title     = {Community-Based Weighted Graph Model for Valence-Arousal Prediction of Affective Words},
+  journal   = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+  year      = {2016},
+  volume    = {24},
+  number    = {11},
+  pages     = {1957-1968},
+  doi       = {10.1109/taslp.2016.2594287},
+  file      = {:Community-Based Weighted Graph Model for Valence-Arousal Prediction of Affective Words.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
 }
 
 @Article{Ward1963,
@@ -22414,6 +22533,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2014.12.25},
 }
 
+@Article{Yang2015b,
+  author    = {Yang, L. and Jin, D. and Wang, X. and Cao, X.},
+  title     = {Active link selection for efficient semi-supervised community detection},
+  journal   = {Scientific Reports},
+  year      = {2015},
+  volume    = {5},
+  pages     = {9039},
+  doi       = {10.1038/srep09039},
+  file      = {:Active link selection for efficient semi-supervised community detection.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2015.03.18},
+}
+
 @InProceedings{Yang2015f,
   author    = {Yang, B. and Zhao, X. and Liu, X.},
   title     = {Bayesian approach to modeling and detecting communities in signed network},
@@ -22425,6 +22558,18 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.06.13},
   url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9376},
+}
+
+@InProceedings{Yang2016,
+  author    = {Yang, L. and Cao, X. and He, D. and Wang, C. and Wang, X. and Zhang, W.},
+  title     = {Modularity based Community Detection with Deep Learning},
+  booktitle = {International Joint Conference on Artificial Intelligence},
+  year      = {2016},
+  file      = {:Modularity based Community Detection with Deep Learning.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2016.06.04},
+  url       = {http://www.cs.wustl.edu/~zhang/publications/ijcai16-DL.pdf},
 }
 
 @Article{Yang2017c,
@@ -22452,7 +22597,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1371/journal.pone.0178029},
   file          = {:Exploring the roles of cannot-link constraint in community detection via Multi-variance Mixed Gaussian Generative Model.pdf:PDF},
-  groups        = {Graph Partitioning},
+  groups        = {Graph Partitioning, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.07.11},
 }
@@ -22829,6 +22974,17 @@ old title: The map equation and the resolution limit in community detection},
   timestamp   = {2017.07.23},
 }
 
+@InProceedings{Zass2005,
+  author    = {Zass, R. and Shashua, A.},
+  title     = {A unifying approach to hard and probabilistic clustering},
+  booktitle = {10th IEEE International Conference on Computer Vision},
+  year      = {2005},
+  doi       = {10.1109/iccv.2005.27},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
+}
+
 @InProceedings{Zaversnik2004,
   author    = {Zaversnik, M. and Batagelj, V.},
   title     = {Islands},
@@ -23100,10 +23256,10 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {Conference on Empirical Methods in Natural Language Processing},
   year      = {2014},
   pages     = {1522-1531},
+  doi       = {10.3115/v1/D14-1161},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.27},
-  url       = {http://www.aclweb.org/anthology/D14-1161},
 }
 
 @Article{Zhang2014w,
