--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -722,6 +722,7 @@
   pages     = {209-212},
   doi       = {10.26483/ijarcs.v8i6.4322},
   file      = {:Balanced Laplacian Energy of a Friendship Graph.pdf:PDF},
+  groups    = {Just balance, Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.05},
 }
@@ -2356,6 +2357,20 @@
   owner     = {Vincent},
   timestamp = {2017.07.05},
   url       = {10.1007/978-1-4757-0450-1},
+}
+
+@Article{Bezdek2007,
+  author    = {Bezdek, J. C. and Hathaway, R. J. and Huband, J. M.},
+  title     = {Visual Assessment of Clustering Tendency for Rectangular Dissimilarity Matrices},
+  journal   = {IEEE Transactions on Fuzzy Systems},
+  year      = {2007},
+  volume    = {15},
+  number    = {5},
+  pages     = {890-903},
+  doi       = {10.1109/tfuzz.2006.889956},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
 }
 
 @InProceedings{Bhatia2008,
@@ -5598,6 +5613,17 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.07.28},
+}
+
+@InProceedings{Ding2004,
+  author    = {Ding, C. and He, X.},
+  title     = {K-means clustering via principal component analysis},
+  booktitle = {21st international conference on Machine learning},
+  year      = {2004},
+  doi       = {10.1145/1015330.1015408},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
 }
 
 @InProceedings{Ding2009,
@@ -8937,6 +8963,21 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   timestamp = {2017.04.09},
 }
 
+@Article{Harary1961,
+  author    = {Harary, F.},
+  title     = {A structural analysis of the situation in the Middle East in 1956},
+  journal   = {Journal of Conflict Resolution},
+  year      = {1961},
+  volume    = {5},
+  number    = {2},
+  pages     = {167-178},
+  doi       = {10.1177/002200276100500204},
+  file      = {:A structural analysis of the situation in the Middle East in 1956.pdf:PDF},
+  groups    = {Just balance, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
 @Book{Harary1965,
   title     = {Structural models: An introduction to the theory of directed graphs},
   publisher = {John Wiley},
@@ -9238,7 +9279,7 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   pages     = {147-151},
   doi       = {10.1016/j.physa.2007.04.124},
   file      = {:Spectral and network methods in the analysis of correlation matrices of stock returns.pdf:PDF},
-  groups    = {Graph Partitioning, _To do},
+  groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
 }
@@ -9268,7 +9309,7 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   pages     = {5930-5945},
   doi       = {10.1016/j.physa.2008.06.028},
   file      = {:Spectral methods and cluster structure in correlation-based networks.pdf:PDF},
-  groups    = {Graph Partitioning, _To do},
+  groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.08.29},
 }
@@ -9328,6 +9369,17 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.17},
+}
+
+@InProceedings{Herlocker1999,
+  author    = {Herlocker, J. L. and Konstan, J. A. and Borchers, A. and Riedl, J.},
+  title     = {An algorithmic framework for performing collaborative filtering},
+  booktitle = {22nd annual international ACM/SIGIR conference on Research and development in information retrieval},
+  year      = {1999},
+  doi       = {10.1145/312624.312682},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
 }
 
 @Article{Hidalgo2007,
@@ -9603,6 +9655,62 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   url       = {https://books.google.fr/books/about/The_Human_Group.html?id=OmZWeLrvPnkC},
 }
 
+@InCollection{Honda2001,
+  author    = {Honda, K. and Sugiura, N. and Ichihashi, H. and Araki, S.},
+  title     = {Collaborative Filtering Using Principal Component Analysis and Fuzzy Clustering},
+  booktitle = {Web Intelligence: Research and Development},
+  publisher = {Springer},
+  year      = {2001},
+  pages     = {394-402},
+  doi       = {10.1007/3-540-45490-x_50},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
+@Article{Honda2004,
+  author    = {Honda, K. and Ichihashi, H.},
+  title     = {Component-wise robust linear fuzzy clustering for collaborative filtering},
+  journal   = {International Journal of Approximate Reasoning},
+  year      = {2004},
+  volume    = {37},
+  number    = {2},
+  pages     = {127-144},
+  doi       = {10.1016/j.ijar.2004.02.001},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
+@Article{Honda2005,
+  author    = {Honda, K. and Ichihashi, H.},
+  title     = {Regularized linear fuzzy clustering and probabilistic PCA mixture models},
+  journal   = {IEEE Transactions on Fuzzy Systems},
+  year      = {2005},
+  volume    = {13},
+  number    = {4},
+  pages     = {508-516},
+  doi       = {10.1109/tfuzz.2004.840104},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
+@Article{Honda2008,
+  author    = {Honda, K. and Notsu, A. and Ichihashi, H.},
+  title     = {Collaborative filtering by user item clustering based on structural balancing approach},
+  journal   = {International Journal of Computer Science and Network Security},
+  year      = {2008},
+  volume    = {8},
+  number    = {.12},
+  pages     = {190-195},
+  file      = {:Collaborative filtering by user item clustering based on structural balancing approach.pdf:PDF},
+  groups    = {Graph Partitioning, Done Manually},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+  url       = {http://paper.ijcsns.org/07_book/200812/20081227.pdf},
+}
+
 @InProceedings{Honda2009,
   author    = {Honda, K. and Notsu, A. and Ichihashi, H.},
   title     = {Collaborative filtering by sequential extraction of user-item clusters based on structural balancing approach},
@@ -9610,7 +9718,7 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   year      = {2009},
   doi       = {10.1109/fuzzy.2009.5277251},
   file      = {:Collaborative filtering by sequential extraction of user-item clusters based on structural balancing approach.pdf:PDF},
-  groups    = {Graph Partitioning},
+  groups    = {Graph Partitioning, Found},
   owner     = {Vincent},
   timestamp = {2017.08.23},
 }
@@ -10308,6 +10416,21 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   timestamp = {2017.04.12},
 }
 
+@Article{Inoue1999,
+  author    = {Inoue, K. and Urahama, K.},
+  title     = {Sequential fuzzy cluster extraction by a graph spectral method},
+  journal   = {Pattern Recognition Letters},
+  year      = {1999},
+  volume    = {20},
+  number    = {7},
+  pages     = {699-705},
+  doi       = {10.1016/s0167-8655(99)00034-3},
+  file      = {:Sequential fuzzy cluster extraction by a graph spectral method.pdf:PDF},
+  groups    = {Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
 @Article{Isogai2014,
   author    = {Isogai, T.},
   title     = {Clustering of Japanese stock returns by recursive modularity optimization for efficient portfolio diversification},
@@ -10973,9 +11096,23 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   number    = {2},
   pages     = {140-176},
   doi       = {10.1016/0022-2496(78)90060-3},
-  groups    = {Just balance, Ignored},
+  file      = {:Studies on the balancing, the minimal balancing, and the minimum balancing processes for social groups with planar and nonplanar graph structures.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2017.07.21},
+}
+
+@Article{Katai1978a,
+  author    = {Katai, O. and Iwai, S.},
+  title     = {On the Characterization of Balancing Processes of Social Systems and the Derivation of the Minimal Balancing Processes},
+  journal   = {IEEE Transactions on Systems, Man, and Cybernetics},
+  year      = {1978},
+  volume    = {8},
+  number    = {5},
+  pages     = {337-348},
+  doi       = {10.1109/tsmc.1978.4309974},
+  file      = {:On the Characterization of Balancing Processes of Social Systems and the Derivation of the Minimal Balancing Processes.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
 }
 
 @Article{Katz1953,
@@ -11658,6 +11795,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.24},
+}
+
+@Article{Konstan1997,
+  author    = {Konstan, J. A. and Miller, B. N. and Maltz, D. and Herlocker, J. L. and Gordon, L. R. and Riedl, J.},
+  title     = {GroupLens: applying collaborative filtering to Usenet news},
+  journal   = {Communications of the ACM},
+  year      = {1997},
+  volume    = {40},
+  number    = {3},
+  pages     = {77-87},
+  doi       = {10.1145/245108.245126},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
 }
 
 @Article{Koontz1975,
@@ -13184,6 +13335,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.15},
+}
+
+@Article{Li2016,
+  author    = {Li, Z. and Liu, J.},
+  title     = {A multi-agent genetic algorithm for community detection in complex networks},
+  journal   = {Physica A},
+  year      = {2016},
+  volume    = {449},
+  pages     = {336-347},
+  doi       = {10.1016/j.physa.2015.12.126},
+  file      = {:A multi-agent genetic algorithm for community detection in complex networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2016.01.12},
 }
 
 @Article{Li2016c,
@@ -15622,6 +15787,20 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://ijoc.org/index.php/ijoc/article/viewFile/1369/745},
 }
 
+@Article{Newcomb1953,
+  author    = {Newcomb, T. M.},
+  title     = {An approach to the study of communicative acts.},
+  journal   = {Psychological Review},
+  year      = {1953},
+  volume    = {60},
+  number    = {6},
+  pages     = {393-404},
+  doi       = {10.1037/h0063098},
+  groups    = {Just balance, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
 @Article{Newcomb1956,
   author    = {Newcomb, T. M.},
   title     = {The prediction of interpersonal attraction},
@@ -16028,6 +16207,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Just balance, Ignored},
   owner     = {Vincent},
   timestamp = {2017.05.04},
+}
+
+@Article{Notsu2006,
+  author    = {Notsu, A. and Ichihashi, H. and Honda, K.},
+  title     = {Agent simulation based on perceptual balance},
+  journal   = {International Journal of Computer Science and Network Security},
+  year      = {2006},
+  volume    = {6},
+  number    = {.12},
+  pages     = {50-54},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+  url       = {https://pdfs.semanticscholar.org/a4f9/9722659e7df44dd05f70e6a7fb7f6fe37357.pdf},
 }
 
 @Article{Noutsos2006,
@@ -16921,7 +17114,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1109/TEVC.2017.2737600},
   file          = {:Evolutionary Computation for Community Detection in Networks- a Review.pdf:PDF},
-  groups        = {Graph Partitioning, _To do},
+  groups        = {Graph Partitioning, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.08.18},
 }
@@ -20708,6 +20901,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.28},
 }
 
+@Article{Tsuda1996,
+  author    = {Tsuda, K. and Minoh, M. and Ikeda, K.},
+  title     = {Extracting straight lines by sequential fuzzy clustering},
+  journal   = {Pattern Recognition Letters},
+  year      = {1996},
+  volume    = {17},
+  number    = {6},
+  pages     = {643-649},
+  doi       = {10.1016/0167-8655(96)00029-3},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
 @Article{Tumminello2005,
   author    = {Tumminello, M. and Aste, T. and di Matteo, T. and Mantegna, R. N.},
   title     = {A tool for filtering information in complex systems},
@@ -22095,7 +22302,8 @@ old title: The map equation and the resolution limit in community detection},
   year          = {2017},
   __markedentry = {[Vincent:]},
   doi           = {10.1109/CSE-EUC.2017.21},
-  groups        = {Graph Partitioning, _To do},
+  file          = {:A Conical Area Evolutionary Algorithm Based on Modularity Q for Community Detection from Signed Networks.pdf:PDF},
+  groups        = {Graph Partitioning, Not Found Yet},
   owner         = {Vincent},
   timestamp     = {2017.08.16},
 }
@@ -22691,6 +22899,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.16},
+}
+
+@Article{YING2012,
+  author    = {Ying, W. and Xu, X. and Feng, Y. and Wu, Y.},
+  title     = {An Efficient Conical Area Evolutionary Algorithm for Bi-objective Optimization},
+  journal   = {IEICE Transactions on Fundamentals of Electronics, Communications and Computer Sciences},
+  year      = {2012},
+  volume    = {E95.A},
+  number    = {8},
+  pages     = {1420-1425},
+  doi       = {10.1587/transfun.e95.a.1420},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
 }
 
 @Article{Yokota1995,
@@ -23498,6 +23720,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.29},
+}
+
+@Article{Zhou2011b,
+  author    = {Zhou, A. and Qu, B.-Y. and Li, H. and Zhao, S.-Z. and Suganthan, P. N. and Zhang, Q.},
+  title     = {Multiobjective evolutionary algorithms: A survey of the state of the art},
+  journal   = {Swarm and Evolutionary Computation},
+  year      = {2011},
+  volume    = {1},
+  number    = {1},
+  pages     = {32-49},
+  doi       = {10.1016/j.swevo.2011.03.001},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.26},
 }
 
 @InProceedings{Zhou2013,
