--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -2373,6 +2373,17 @@
   timestamp = {2017.08.27},
 }
 
+@Book{Bhatia2007,
+  title     = {Positive Definite Matrices},
+  publisher = {Princeton University Press},
+  year      = {2007},
+  author    = {Bhatia, R.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+  url       = {http://www.jstor.org/stable/j.ctt7rxv2},
+}
+
 @InProceedings{Bhatia2008,
   author    = {Bhatia, M. P. S. and Gaur, P.},
   title     = {Statistical approach for community mining in social networks},
@@ -5991,6 +6002,20 @@
   timestamp     = {2017.06.01},
 }
 
+@Article{Druskin1998,
+  author    = {Druskin, V. and Knizhnerman, L.},
+  title     = {Extended Krylov Subspaces: Approximation of the Matrix Square Root and Related Functions},
+  journal   = {SIAM Journal on Matrix Analysis and Applications},
+  year      = {1998},
+  volume    = {19},
+  number    = {3},
+  pages     = {755-771},
+  doi       = {10.1137/s0895479895292400},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
 @InProceedings{Du2007a,
   author    = {Du, N. and Wu, B. and Pei, X. and Wang, B. and Xu, L.},
   title     = {Community detection in large-scale social networks},
@@ -6537,6 +6562,18 @@
   owner     = {Vincent},
   timestamp = {2017.07.27},
   url       = {https://arxiv.org/abs/1411.4166},
+}
+
+@TechReport{Fasi2016,
+  author      = {Fasi, M. and Iannazzo, B.},
+  title       = {Computing the weighted geometric mean of two large-scale matrices and its inverse times a vector},
+  institution = {Manchester Institute for Mathematical Sciences},
+  year        = {2016},
+  number      = {2016.29},
+  groups      = {Others, Ignored},
+  owner       = {Vincent},
+  timestamp   = {2017.08.27},
+  url         = {http://eprints.ma.man.ac.uk/2474/01/covered/MIMS_ep2016_29.pdf},
 }
 
 @InProceedings{Fast2005,
@@ -9410,6 +9447,20 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   timestamp = {2017.08.12},
 }
 
+@Article{Higham2005,
+  author    = {Higham, N. J. and Mackey, D. S. and Mackey, N. and Tisseur, F.},
+  title     = {Functions Preserving Matrix Groups and Iterations for the Matrix Square Root},
+  journal   = {SIAM Journal on Matrix Analysis and Applications},
+  year      = {2005},
+  volume    = {26},
+  number    = {3},
+  pages     = {849-877},
+  doi       = {10.1137/s0895479804442218},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
 @InProceedings{Hildrum2005,
   author    = {Hildrum, K. and Yu, P. S.},
   title     = {Focused Community Discovery},
@@ -10335,6 +10386,32 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   timestamp     = {2017.06.28},
 }
 
+@Article{Iannazzo2015,
+  author    = {Iannazzo, B.},
+  title     = {The geometric mean of two matrices from a computational viewpoint},
+  journal   = {Numerical Linear Algebra with Applications},
+  year      = {2015},
+  volume    = {23},
+  number    = {2},
+  pages     = {208-229},
+  doi       = {10.1002/nla.2022},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
+@Article{Iannazzo2017,
+  author    = {Iannazzo, B. and Porcelli, M.},
+  title     = {The Riemannian Barzilai–Borwein method with nonmonotone line search and the matrix geometric mean computation},
+  journal   = {Ima Journal Of Numerical Analysis},
+  year      = {2017},
+  pages     = {drx015},
+  doi       = {10.1093/imanum/drx015},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
 @InProceedings{Ichise2006,
   author    = {Ichise, R. and Takeda, H. and Kouno, S. and Muraki, T.},
   title     = {A mining method of communities keeping tacit knowledge},
@@ -10579,6 +10656,7 @@ arXiv url: https://arxiv.org/abs/1312.4345},
   pages     = {24},
   doi       = {10.1145/2501977},
   file      = {:Cluster-Based Collaborative Filtering for Sign Prediction in Social Networks with Positive and Negative Links.pdf:PDF},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
 }
@@ -11664,6 +11742,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.21},
+}
+
+@Article{Knizhnerman2009,
+  author    = {Knizhnerman, L. and Simoncini, V.},
+  title     = {A new investigation of the extended Krylov subspace method for matrix function evaluations},
+  journal   = {Numerical Linear Algebra with Applications},
+  year      = {2009},
+  doi       = {10.1002/nla.652},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
 }
 
 @InProceedings{Knowles,
@@ -13787,6 +13876,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2014.03.11},
 }
 
+@Article{Liu2015,
+  author    = {Liu, S.},
+  title     = {Multi-way dual Cheeger constants and spectral bounds of graphs},
+  journal   = {Advances in Mathematics},
+  year      = {2015},
+  volume    = {268},
+  pages     = {306-338},
+  doi       = {10.1016/j.aim.2014.09.023},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+}
+
 @InProceedings{Lo2007,
   author    = {Lo, D. and Khoo, S.-C. and Liu, C.},
   title     = {Efficient mining of iterative patterns for software specification discovery},
@@ -15000,7 +15102,7 @@ old title: The map equation and the resolution limit in community detection},
   booktitle = {Advances in Neural Information Processing Systems},
   year      = {2016},
   file      = {:Clustering Signed Networks with the Geometric Mean of Laplacians.pdf:PDF},
-  groups    = {Graph Partitioning},
+  groups    = {Graph Partitioning, Done Manually},
   owner     = {Vincent},
   timestamp = {2017.08.26},
   url       = {http://papers.nips.cc/paper/6163-clustering-signed-networks-with-the-geometric-mean-of-laplacians},
@@ -17538,6 +17640,7 @@ old title: The map equation and the resolution limit in community detection},
   year      = {2013},
   doi       = {10.1109/pst.2013.6596064},
   file      = {:Extended structural balance theory for modeling trust in social networks.pdf:PDF},
+  groups    = {Just balance, Ignored},
   owner     = {Vincent},
   timestamp = {2017.08.23},
 }
@@ -17691,6 +17794,20 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.08.26},
   url       = {http://aclweb.org/anthology/E09-1077},
+}
+
+@Article{Rassouli2003,
+  author    = {Raïssouli, M. and Leazizi, F.},
+  title     = {Continued fraction expansion of the geometric matrix mean and applications},
+  journal   = {Linear Algebra and its Applications},
+  year      = {2003},
+  volume    = {359},
+  number    = {1-3},
+  pages     = {37-57},
+  doi       = {10.1016/s0024-3795(02)00427-5},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
 }
 
 @Article{Ratti2010,
@@ -18048,6 +18165,20 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.08.26},
   url       = {https://en.wikipedia.org/wiki/Roget%27s_Thesaurus},
+}
+
+@Article{Rohe2011,
+  author    = {Rohe, K. and Chatterjee, S. and Yu, B.},
+  title     = {Spectral clustering and the high-dimensional stochastic blockmodel},
+  journal   = {Annals of Statistics},
+  year      = {2011},
+  volume    = {39},
+  number    = {4},
+  pages     = {1878-1915},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.27},
+  url       = {https://projecteuclid.org/euclid.aos/1314190618},
 }
 
 @InProceedings{Romano2014,
