--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5057,6 +5057,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@Article{Ji2013,
+  author    = {Ji, S. and Xu, W. and Yang, M. and Yu, K.},
+  title     = {3D Convolutional Neural Networks for Human Action Recognition},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2013},
+  volume    = {35},
+  number    = {1},
+  pages     = {221-231},
+  doi       = {10.1109/tpami.2012.59},
+  owner     = {Vincent},
+  timestamp = {2019.04.04},
+}
+
 @InProceedings{Jing2007,
   author    = {Jing, H. and Kambhatla, N. and Roukos, S.},
   title     = {Extracting Social Networks and Biographical Facts From Conversational Speech Transcripts},
